Make sure to deselect the old items before selecting new items (bug 278202). patch by aaronr@us.ibm.com, r=beaufour, sr=me.